# CUDA-Exercises

./: .gitignore  README.md
Problem Set 1/: CMakeLists.txt  main.cpp
Problem Set 1/cuda/: cuda_func.cu  cuda_func.hpp
Problem Set 1/opencv/: opencv_func.cpp  opencv_func.hpp
Problem Set 1/utils/: timer.cpp  timer.hpp  utils.cpp  utils.hpp
Problem Set 2/: CMakeLists.txt  main.cpp
Problem Set 2/cuda/: cuda_func.cu  cuda_func.hpp
Problem Set 2/opencv/: opencv_func.cpp  opencv_func.hpp
Problem Set 2/utils/: helpers.hpp
Problem Set 3/: CMakeLists.txt  main.cpp
Problem Set 3/cuda/: cuda_func.cu  cuda_func.hpp  cuda_utils.cu  cuda_utils.hpp
Problem Set 3/reference/: reference_calc.cpp
Problem Set 3/utils/: compare.cpp  loadSaveImage.cpp
